# minecraft-api-mcp

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DOCKER_SETUP.md  Dockerfile  README.md  TESTING.md  build.gradle  docker-bake.hcl  docker-compose.yml  download-fabric-api-alternative.sh  download-fabric-server.sh  eula.txt.example  gradle.properties  mcp.Dockerfile  minecraft-entrypoint.sh  minecraft.Dockerfile  nginx-entrypoint.sh  nginx.Dockerfile  nginx.conf  server.properties.example  test_api.py
.kiro/specs/build-task-management/: design.md  requirements.md  tasks.md
.kiro/specs/mcp-modularization/: design.md  requirements.md  tasks.md
.kiro/specs/prefab-ladder/: design.md  requirements.md  tasks.md
docs/: openapi-minecraft.yaml  openapi-schematics.yaml
mcp/: .dockerignore  BACKWARD_COMPATIBILITY_TEST_RESULTS.md  Dockerfile  FINAL_VERIFICATION_RESULTS.md  README.md  debug_mcp_version.py.bak  mcp_config.json  minecraft_mcp.py  pyproject.toml  requirements.txt  test_backward_compatibility.py  test_debug_mode.py  test_final_verification.py  test_preview_heightmap.py  test_schematic_tools.py  test_sse.sh  test_stdio_transport.py  test_teleport_player.py
mcp/minecraft_mcp/: __init__.py  __main__.py  config.py  server.py
mcp/minecraft_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp/minecraft_mcp/client/: __init__.py  minecraft_api.py  schematic_service.py
mcp/minecraft_mcp/handlers/: __init__.py  blocks.py  builds.py  effects.py  messages.py  prefabs.py  schematics.py  system.py  world.py
mcp/minecraft_mcp/tools/: __init__.py  registry.py  schemas.py
mcp/minecraft_mcp/utils/: __init__.py  formatting.py  helpers.py
nbt-gen/: README.md  nbt-gen.py
schematic-service/: .dockerignore  Dockerfile  pyproject.toml  test_app.py  test_catalog.py  test_search.py
schematic-service/schematic_service/: __init__.py  app.py  catalog.py  config.py  main.py  search.py
scripts/: pg_dump_snapshot.sh  pg_restore_snapshot.sh
skills/minecraft-http-gateway/: SKILL.md
skills/minecraft-http-gateway/agents/: openai.yaml
skills/minecraft-http-gateway/references/: builds.md  core.md  payload-patterns.md  world-and-blocks.md
skills/minecraft-http-gateway/scripts/: build_flow.py  call_api.py  rail_debug_e2e.py  world_ops.py  world_query.py
(+127 files in other folders)
