[project]
name = "minecraft-schematic-service"
version = "0.1.0"
description = "Optional searchable schematic catalog service for minecraft-mcp-api"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["schematic_service"]

[project.scripts]
schematic-service = "schematic_service.main:main"
